Fix pinned navigation not showing up in the correct place.

--- a/wdn/templates_3.0/css/script.css
+++ b/wdn/templates_3.0/css/script.css
@@ -14,6 +14,7 @@
 	position:relative;
 	left:0px;
 	width:100%;
+	top:auto;
 }
 
 .nav_pinned #navigation ul {
